--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,8 @@ textarea:focus {
 a:hover,
 a:focus {
   text-decoration: none;
-  outline: none;
-  color: goldenrod;
+  outline: darkorange;
+  color: #ffffff;
 }
 
 ul,
